--- a/src/app/to-do/to-do.component.html
+++ b/src/app/to-do/to-do.component.html
@@ -1,13 +1,15 @@
 <div>
-    <ng-container *ngIf="tasksList.length > 0; else noTasks">
-      <ul>
-        <li *ngFor="let task of tasksList; let i = index">
-          {{task}}
-          <button (click)="remove(task)">Usuń</button>
-          <button (click)="done(task)">Zrobione</button>
-        </li>
-      </ul>
-    </ng-container>
+  <p [ngStyle]="{color: getColor()}">Zadań do wykonania: {{tasksList.length}}</p>
+  <ng-container *ngIf="tasksList.length > 0; else noTasks">
+    <ul>
+      <li *ngFor="let task of tasksList; let i = index" 
+      [ngClass]="{'odd-li' : i%2==0, 'last-li' : tasksList.length===1}">
+        {{task}}
+        <button type="button" class="btn btn-danger" (click)="remove(task)">Usuń</button>
+        <button type="button" class="btn btn-success" (click)="done(task)">Zrobione</button>
+      </li>
+    </ul>
+  </ng-container>
 </div>
 
 <ng-template #noTasks>
