--- a/src/app/done-task/done-task.component.html
+++ b/src/app/done-task/done-task.component.html
@@ -1,5 +1,5 @@
 <div>
-  Wykonanych zadań: {{tasksDone.length}}
+  <p>Wykonanych zadań: {{tasksDone.length}}</p>
   <ul>
     <li *ngFor="let task of tasksDone">
       {{task}}
