--- a/src/app/done-task/done-task.component.html
+++ b/src/app/done-task/done-task.component.html
@@ -1,8 +1,8 @@
 <div>
   <p>Wykonanych zadań: {{tasksDone.length}}</p>
   <ul>
-    <li *ngFor="let task of tasksDone">
-      {{task}}
+    <li appChecked appDate [date]="task.end" *ngFor="let task of tasksDone">
+      {{task.name | transformTask: ' - super!'}}
     </li>
   </ul>
 </div>
